--- a/index.html
+++ b/index.html
@@ -741,9 +741,9 @@
             wordsMetric.textContent = words.toLocaleString();
             tokensMetric.textContent = tokens.toLocaleString();
             modeMetric.textContent = role.charAt(0).toUpperCase() + role.slice(1);
-            
+        
             try {
-                const response = await fetch('http://localhost:3000/summarize', {
+                const response = await fetch('https://ultramind-api.onrender.com/summarize', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ text, role })
